# aiops-agent

./: .gitignore  CONTRIBUTING.md  README.md  aiops.toml  pyproject.toml
docs/: architecture.md  conversation_history.txt
src/: .env  aiops.toml  aiops_cli.py  pyproject.toml
src/aiops/: __init__.py  agent.py  cli.py  config.py  executor.py  orchestrator.py  planner.py  rag.py  retrieval.py  script_workspace.py  skills_loader.py  skills_router.py  state_manager.py  tools.py
src/aiops/llm/: base.py  openai_client.py
src/aiops/prompts/: system.txt
src/aiops/skills/: __init__.py  deployment.md  install_from_repo.py  k8s.md  nephio_r5.py  oran_basic.py
src/examples/: prompts.md
src/mcp/: app.py  manifest.json  mcp_bash_sample_run.py  mcp_server.py
