[project]
name = "aiops-agent"
version = "0.1.0"
description = "Prompt-driven AI Ops agent for Nephio and O-RAN"
authors = [{name = "Your Name"}]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "typer>=0.12.3",
    "PyYAML>=6.0.2",
    "openai>=1.40.0"
]

[project.scripts]
aiops = "aiops.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
